added velocity display and correct animation timing

--- a/tableau-extension/package.json
+++ b/tableau-extension/package.json
@@ -29,6 +29,7 @@
     "@turf/buffer": "^5.1.5",
     "@turf/helpers": "^6.1.4",
     "@turf/length": "^6.0.2",
+    "@turf/distance": "^6.0.2",
     "babel-polyfill": "^6.26.0",
     "mapbox-gl": "^0.48.0"
   },
